# CART-Decision-tree

code/: CMakeLists.txt
code/lib/: CMakeLists.txt
code/lib/include/: Bagging.hpp  Calculations.hpp  DataReader.hpp  Dataset.hpp  DecisionTree.hpp  Leaf.hpp  Node.hpp  Question.hpp  TreeTest.hpp  Utils.hpp
code/lib/src/: Bagging.cpp  Calculations.cpp  DataReader.cpp  DecisionTree.cpp  Leaf.cpp  Node.cpp  Question.cpp  TreeTest.cpp
code/test/: CMakeLists.txt  bagging_tester.cpp
